--- a/website/notebook/sitely/graphics.html
+++ b/website/notebook/sitely/graphics.html
@@ -3,8 +3,8 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>site materials</title>
-	<link rel="icon" type="image/x-icon" href="favicon.gif">
+	<title>graphics</title>
+	<link rel="icon" type="image/x-icon" href="/notebook/favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="site.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/notebook/body.css" rel="stylesheet" type="text/css" media="all">
@@ -339,6 +339,8 @@
 		<a title="sorahana" href="https://sorahana.ciao.jp/" target="_blank"><img src="/!g/deco/sorahana-himawari-b-a.gif"></a>
 		<a title="sorahana" href="https://sorahana.ciao.jp/" target="_blank"><img src="/!g/deco/sorahana-2012icon09b.gif"></a>
 		<a title="sorahana" href="https://sorahana.ciao.jp/" target="_blank"><img src="/!g/deco/sorahana-2012icon09.gif"></a>
+		<a title="sorahana" href="https://sorahana.ciao.jp/" target="_blank"><img src="/!g/deco/yellowbutteer.gif"></a>
+		<a title="sorahana" href="https://sorahana.ciao.jp/" target="_blank"><img src="/!g/deco/worm.gif"></a>
 		<a title="sorahana" href="https://sorahana.ciao.jp/" target="_blank"><img src="/!g/deco/sorahana-rainset.gif"></a>
 		<a title="sozaiya405" href="http://sozaiya405.chu.jp/" target="_blank"><img src="/!g/pix/pc.gif"></a>
 		<a title="foollovers" href="https://foollovers.com/" target="_blank"><img src="/!g/deco/h03-icon-strawberry.gif"></a>
@@ -348,7 +350,16 @@
 		<img src="/!g/deco/hk-p.gif">
 
 		<!-- sozaiya405 bears -->
-		<br><a title="sozaiya405" href="http://sozaiya405.chu.jp/" target="_blank"><img src="/!g/pix/icon_ani_k_kya-.gif"><img src="/!g/pix/icon_k_clover1.gif"><img src="/!g/pix/icon_k_clover2.gif"><img src="/!g/pix/icon_k_love1.gif"><img src="/!g/pix/icon_k_mail.gif"><img src="/!g/pix/kuma-macbook-60.png"><img src="/!g/pix/icon_k_gyo.gif"><img src="/!g/pix/music-note-sozaiya.gif"><img src="/!g/pix/music-note2-sozaiya.gif"></a>
+		<br>
+		<a title="sozaiya405" href="http://sozaiya405.chu.jp/" target="_blank"><img src="/!g/pix/icon_ani_k_kya-.gif"></a>
+		<a title="sozaiya405" href="http://sozaiya405.chu.jp/" target="_blank"><img src="/!g/pix/icon_k_clover1.gif"></a>
+		<a title="sozaiya405" href="http://sozaiya405.chu.jp/" target="_blank"><img src="/!g/pix/icon_k_clover2.gif"></a>
+		<a title="sozaiya405" href="http://sozaiya405.chu.jp/" target="_blank"><img src="/!g/pix/icon_k_love1.gif"></a>
+		<a title="sozaiya405" href="http://sozaiya405.chu.jp/" target="_blank"><img src="/!g/pix/icon_k_mail.gif"></a>
+		<a title="sozaiya405" href="http://sozaiya405.chu.jp/" target="_blank"><img src="/!g/pix/kuma-macbook-60.png"></a>
+		<a title="sozaiya405" href="http://sozaiya405.chu.jp/" target="_blank"><img src="/!g/pix/icon_k_gyo.gif"></a>
+		<a title="sozaiya405" href="http://sozaiya405.chu.jp/" target="_blank"><img src="/!g/pix/music-note-sozaiya.gif"></a>
+		<a title="sozaiya405" href="http://sozaiya405.chu.jp/" target="_blank"><img src="/!g/pix/music-note2-sozaiya.gif"></a>
 
 		<h3>site icons</h3>
 
