--- a/website/notebook/sitely/to-dos.html
+++ b/website/notebook/sitely/to-dos.html
@@ -94,12 +94,12 @@
 				<li class="no">/about</li>
 				<li class="no">/notebook</li>
 				<li class="no">/journal</li>
-				<li class="no">/shrines/mizu</li>
+				<li class="no">/shrines/mizu (will get to this one when i decide to revamp the whole code)</li>
 				<li class="no">/music/cds</li>
 				<li class="no">/music/fav-albums</li>
 			</ul>
 			<li class="yes">add a credit page to /journal</li>
-			<li class="dot">doqmeat homepage v3!!!!!!</li>
+			<li class="yes">doqmeat homepage v3!!!!!!</li>
 			<li class="no">200 x 40 banner</li>
 			<li class="no">50 x 50 icon</li>
 		</ul>
