--- a/website/notebook/index.html
+++ b/website/notebook/index.html
@@ -148,9 +148,9 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 				<div class="left-in">
 					<p>the archives. its dusty in here. </p>
 					<p><mark>some links within these pages might be broken!</mark></p>
-					<li><a href="archive/homepage.html" target="iframe_c">homepage</a></li>
+					<li><a href="archive/homepage.html" target="iframe_c">past homepages</a></li>
 					<ul>
-						↳ <a href="archive/homepage.html#v1" target="iframe_c">v1</a>
+						↳ <a href="archive/homepage.html#v1" target="iframe_c">v1</a> ↳ <a href="archive/homepage.html#v2" target="iframe_c">v2</a> ↳ <a href="archive/homepage.html#v3" target="iframe_c">v3</a>
 					</ul>
 					<li><a href="archive/layouts.html" target="iframe_c">page layouts</a></li>
 
