--- a/website/notebook/links/credit.html
+++ b/website/notebook/links/credit.html
@@ -43,18 +43,21 @@
 
 		<p>if you still cant find what you're looking for, you're always welcome to ask in my chatbox or e-mail. happy coding!</p>
 
-		<h2 id="home">homepage v3 credits (currently a wip!)</h2>
-		<li>most pixels were found from pixel collection pages like this <a href="https://graphic.neocities.org/" target="_blank">one!</a> i'd love to find the sources for them so i can give proper credit so if any one knows, please e-mail me!</li>
+		<h2 id="home">homepage v3 credits</h2>
+		<li>most pixels were found from pixel collection pages. i'd love to find the sources for each of them so i can give proper credit so if any one knows, please e-mail me!</li>
 		<li><a href="https://stackoverflow.com/questions/16354122/how-to-put-scrolling-text-in-title-tag" target="_blank">scrolling title tag</a></li>
+		<li><a href="https://www.w3schools.com/howto/howto_js_draggable.asp" target="_blank">draggable js code</a> for minecraft cat plush :3</li>
 		<li><a href="https://www.geeksforgeeks.org/how-to-switch-between-multiple-css-stylesheets-using-javascript/" target="_blank">theme switcher js</a></li>
 		<li><a href="https://github.com/biancarosa/lastfm-last-played" target="_blank">last played last.fm js</a> code by bianca rosa</li>
 		<p>these will depend on the theme selected!</p>
 
 		<h3>flower.css</h3>
-		<li><a href="/notebook/links/fonts.html">fonts</a>used in this page are: typo garden, newpenji, gaegu, always in my heart</li>
-		<li>background by <a href="https://unsplash.com/photos/grass-field-at-daytime-PEm_sLmJT-w" target="_blank">Rodion Kutsaiev</a> from unsplash</li>
+		<li>a lot of graphics are from these sites: <img src="/!g/deco/yellowbutteer.gif" alt=""> <img src="/!g/pix/sorahana-beebig2.gif"> <a href="https://sorahana.ciao.jp/" target="_blank">sorahana</a>, <img src="/!g/pix/1leaf.png"> <a href="https://sleepysprout.neocities.org/" target="_blank">sleepysprout</a></li>
+		<li>patterned bgs from <a href="http://sozaioukoku.fc2web.com/index.html" target="_blank">sozaioukoku</a></li>
+		<li><a href="/notebook/links/fonts.html">fonts</a>used in this page are: typo garden, gaegu, spirit, morningtea, nintendo ds bios, simple</li>
+		<li>body background by <a href="https://unsplash.com/photos/grass-field-at-daytime-PEm_sLmJT-w" target="_blank">Rodion Kutsaiev</a> from unsplash</li>
 
-		<h3>space.css</h3>
+		<h3>space.css (wip!)</h3>
 		<li>background by <a href="https://pixelins.tumblr.com/post/100938645642/okay-i-just-really-love-space-here-are-some-tile" target="_blank">pixelins</a></li>
 
 	</div>
