changed landing page!

--- a/website/index.html
+++ b/website/index.html
@@ -40,7 +40,7 @@
 		// <![CDATA[
 		var speed = 500; // speed colours change, 1 second = 1000
 		var glow = 1; // can be set from '0' for no glow, to 10
-		var raincol = new Array("#8BA479", "#F5978F", "#807182"); // change the colours if you want to
+		var raincol = new Array("#E8A5AD", "#9BDDB7", "#B1CFD9"); // change the colours if you want to
 		var alink = "/home"; // page to link text to (set to ="" for no link)
 
 		/****************************
@@ -107,10 +107,6 @@
 		<p>this website uses <u>javascript</u> and <u>iframes</u>. on rare occasions there will be <u>autoplay audio</u>, and discussions of <u>heavy topics</u>. there will be warnings for the latter.</p>
 		<p class="hide"><b>it is not compatible with mobile devices</b>, sorry!</p>
 		<p>this is a personal website made for my own enjoyment. with that said, have fun browsing!</p>
-
-		<img src="https://doqmeat.neocities.org/!g/deco/flower6.gif">
-		<img src="https://doqmeat.neocities.org/!g/deco/treestump.gif">
-		<img src="https://doqmeat.neocities.org/!g/deco/flower6.gif">
 	</main>
 
 	<div id="cat">
@@ -162,26 +158,19 @@
 		</center>
 	</div>
 
-	<footer>
-		<p class="cred">
-			<a href="mailto:doqmeat@gmail.com">e-mail me</a>
-			⋆
-			<a href="https://neocities.org/site/doqmeat">neocities profile</a>
-			⋆
-			<a href="https://github.com/doqmeat/doqmeat.neocities.org">github code</a>
-			<br>
-			<img src="https://doqmeat.neocities.org/!g/pix/mush.gif">
-			<br>
-			<b>credit:</b>
-			background by <a href="https://www.pexels.com/photo/white-and-yellow-flower-on-a-forest-105075/">david j. boozer</a> from pexels
+	<div id="cred">
+	<img src="/!g/div/scribble-rainbow.gif">
+		<p><b>credit:</b>
+			background from pmmm rebellion
 			<img src="!g/pix/1leaf.png">
 			lace borders by <a href="https://sorahana.ciao.jp/">sorahana</a>
 			<img src="!g/pix/1leaf.png">
 			<a href="http://www.mf2fm.com/rv/dhtmlrainbow.php">blinking JS text effect</a>
-
-			<br>
-
 		</p>
+			<img src="/!g/div/scribble-rainbow.gif">
+	</div>
+
+	<footer>
 		<img src="/sites/!g/doqmeat.png">
 		<a href="https://decolonizepalestine.com/" style="background:transparent"><img src="/collection/internet-stamps/!g/palestine.gif"></a>
 		<img src="/collection/internet-stamps/!g/best%20viewed.jpg">
