--- a/website/index.html
+++ b/website/index.html
@@ -13,7 +13,7 @@
 	<title>doqmeat</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="favicon.gif">
-	<link href="!f/index.css" rel="stylesheet" type="text/css" media="all">
+	<link href="!f/index-v3.css" rel="stylesheet" type="text/css" media="all">
 	<link href="fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="!f/snowflakes.css" rel="stylesheet" type="text/css" media="all">
 	<!-- 	webring stuff -->
@@ -159,7 +159,7 @@
 	</div>
 
 	<div id="cred">
-	<img src="/!g/div/scribble-rainbow.gif">
+		<img src="/!g/div/scribble-rainbow.gif">
 		<p><b>credit:</b>
 			background from pmmm rebellion
 			<img src="!g/pix/1leaf.png">
@@ -167,7 +167,7 @@
 			<img src="!g/pix/1leaf.png">
 			<a href="http://www.mf2fm.com/rv/dhtmlrainbow.php">blinking JS text effect</a>
 		</p>
-			<img src="/!g/div/scribble-rainbow.gif">
+		<img src="/!g/div/scribble-rainbow.gif">
 	</div>
 
 	<footer>
