minor changes to music
- converting files to jpg

--- a/website/music/fav-albums.html
+++ b/website/music/fav-albums.html
@@ -62,7 +62,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 
 		<div id="lp-container">
 
-			<div class="filterDiv wish float"><img src="!g/fav-albums/sepiarecord.jpg"><button title="sepia record" class="btn" href="#sepiarecord"></button></div>
+			<div class="filterDiv wish float"><img src="!g/fav-albums/sepiarecord.jpg">.jpg<button title="sepia record" class="btn" href="#sepiarecord"></button></div>
 			<div id="sepiarecord" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -85,7 +85,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 					<p>i dont think i'll ever own this physically since early siinamota albums are a pain to find (+ super expensive) but if i could have any of the albums on my wishlist it would be this one. <b>sepia record</b> i love YOU!</p>
 
 
-					<p><img src="!g/fav-albums/sepiarecord-remodel.png" width="40%" align="left" style="margin-right:10px;">and i think its also worth mentioning that i love the remaster (known as the <b>remodel</b>) version of this album as well. while i think the original ver is perfect, the remodel version touches up on some things and i really appreciate the small details added to the songs.</p>
+					<p><img src="!g/fav-albums/sepiarecord-remodel.jpg" width="40%" align="left" style="margin-right:10px;">and i think its also worth mentioning that i love the remaster (known as the <b>remodel</b>) version of this album as well. while i think the original ver is perfect, the remodel version touches up on some things and i really appreciate the small details added to the songs.</p>
 
 
 					<p>for example in <i>sky fish</i>, siinamota added strings in the final verse of the song which makes it my fav version of it.</p>
@@ -97,7 +97,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv cd float"><img src="!g/fav-albums/Yukikasoullady.png"><button title="soul lady" class="btn" href="#soullady"></button></div>
+			<div class="filterDiv cd float"><img src="!g/fav-albums/Yukikasoullady.jpg"><button title="soul lady" class="btn" href="#soullady"></button></div>
 			<div id="soullady" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
