minor changes to fav albums

--- a/website/music/fav-albums.html
+++ b/website/music/fav-albums.html
@@ -413,7 +413,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv float"><img src="!g/fav-albums/qurqurqur.jpg"><button title="qurqurqur" class="btn" href="#qur"></button></div>
+			<div class="filterDiv float digi"><img src="!g/fav-albums/qurqurqur.jpg"><button title="qurqurqur" class="btn" href="#qur"></button></div>
 			<div id="qur" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -607,12 +607,13 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 	<footer>
 		<img src="/!g/deco/iluvmusic.gif" align="left">
 		<img src="/!g/deco/jam.gif" align="right">
-
-		album scans in this page have all been scanned by me unless stated otherwise! <img src="/!g/pix/musicnote1.gif"> <b>last updated on 08.dec.23</b>
+		<b>last updated on 08.dec.23:</b> added scans to <i>serotonin II</i>.
+		<br>
+		album scans in this page have all been scanned by me unless stated otherwise!
 		<br>
 		<b>credit:</b> page bg is from siinamota's <a href="https://archive.org/details/ikiru-scans/p3.png" target="_blank">ikiru</a> booklet / pop-up bg is from TRPP's self titled album booklet / JS pop-up code from <a href="https://stackoverflow.com/questions/40645032/creating-multiple-modals-on-a-single-page">stackoverflow</a> /
 		<br>
-		<a href="/home">home</a> <img src="/!g/pix/musicnote1.gif"> <a href="/music">music page</a> <img src="/!g/pix/musicnote1.gif"> <a href="#">top</a>
+		<a href="/home">home</a> <img src="/!g/pix/musicnote1.gif"> <a href="/music">music page</a> <img src="/!g/pix/musicnote1.gif"> <a href="/music/cds.html">CD collection</a> <img src="/!g/pix/musicnote1.gif"> <a href="#">top</a>
 	</footer>
 
 	<script>
