fixed broken link

--- a/website/music/fav-albums.html
+++ b/website/music/fav-albums.html
@@ -590,7 +590,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 					<p><img src="!g/fav-albums/celeste.jpg" alt="celeste album cover" width="40%" class="r-img">
 						an absolute banger of a soundtrack!!!!</p>
 					<p>the game itself is also another masterpiece of itself but BRO?!?!?! this soundtrack is just so fucking good!!!! seriously one of the best video game osts i've ever heard</p>
-					<p>i've already talked about why i love this album so much on a <a href="/music/2023/0501#2" target="_blank">listening log</a> of mine. but overall, i just love the grooviness of it all while also being very emotional and even haunting at times. every song in here is so memorable.... muah i love you lena raine and celeste</p>
+					<p>i've already talked about why i love this album so much on a <a href="/music/listening-log/2023/05.html#2" target="_blank">listening log</a> of mine. but overall, i just love the grooviness of it all while also being very emotional and even haunting at times. every song in here is so memorable.... muah i love you lena raine and celeste</p>
 					<p><b>fav songs:</b> in the mirror <img src="/!g/pix/staryellow.gif"> golden <img src="/!g/pix/staryellow.gif"> resurrections <img src="/!g/pix/staryellow.gif"> scattered and lost <img src="/!g/pix/staryellow.gif"> confronting myself </p>
 					<p><b>links:</b> <a href="https://radicaldreamland.bandcamp.com/album/celeste-original-soundtrack" target="_blank">bandcamp</a> / <a href="https://open.spotify.com/album/1ZfETfec0U02KrKNI8w3Gf?si=jh6hddvKSHqEOgOANN9Nsw" target="_blank">spotify</a> / <a href="https://www.youtube.com/playlist?list=PLe1jcCJWvkWiWLp9h3ge0e5v7n6kxEfOG" target="_blank">youtube playlist</a></p>
 				</div>
