--- a/website/notebook/index.html
+++ b/website/notebook/index.html
@@ -77,6 +77,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 								<a href="links#tumblr" target="iframe_a">tumblr blogs and masterposts</a>
 							</small></ul>
 						<br>↳ <a href="links#font" target="iframe_a">fonts</a>
+						<br>↳ <a href="links#img" target="iframe_a">image editing</a>
 						<br>↳ <a href="links#misc" target="iframe_a">misc resources</a>
 						<br>↳ <a href="links#fun" target="iframe_a">for fun</a>
 						<ul><small>
