--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -77,23 +77,20 @@
 
 		<h3>resource pages bookmarks!</h3>
 		<li><a href="https://faegardens333.neocities.org/resources" target="_blank">faegardens333</a> / <a href="https://hekate.neocities.org" target="_blank">hekate</a> / <a href="https://nekonokuni.neocities.org/links" target="_blank">nekonokuni</a> / <a href="https://sadgrl.online/webmastery/webmaster-links" target="_blank">sadgrl.online</a> </li>
-
 		<li><a title="text codes + lots of graphics" href="https://gifcity.carrd.co" target="_blank">gifcity</a> / <a title="fonts, codes, lots of other links" href="https://ishimori.crd.co/" target="_blank">ishiimori</a> / <a title="graphics, bgs, links " href="https://xyz.crd.co" target="_blank">XYZ</a> / <a title="A TON of codes" href="https://rentry.co/codesies" target="_blank">codesies</a></li>
+		<li>more sites with resources can be found on my <a href="/sites/index.html#resources" target="_parent">button wall</a></li>
 
 		<br>
 
 
 		<div class="button">
-			<a title="make your own blinkie, blinkie archive" href="https://blinkies.cafe" target="_blank"><img src="/sites/!g/blinkiesCafe.gif"></a>
-			<a title="have a pet on your site" href="https://gifypet.neocities.org" target="_blank"><img src="/sites/!g/gifypet.gif"></a>
 			<a title="have statuses on your blog!" href="https://status.cafe" target="_blank"><img src="/sites/!g/status.png"></a>
-			<a title="graphics" href="https://graphic.neocities.org" target="_blank"><img src="/sites/!g/graphic.png" target="_blank"></a>
-			<a href="https://archive.cinni.net/index.php" target="_blank"><img src="/sites/!g/cutiearchive.gif"></a>
+
 			<a title="pixels" href="http://whimsical.heartette.net" target="_blank"><img src="/sites/!g/whimsical.gif"></a>
 			<a href="https://99gifshop.neocities.org" target="_blank"><img src="/sites/!g/99gifshop.png"></a>
-			<a title="decoration materials for websites!" href="https://foollovers.com/" target="_blank"><img src="/sites/!g/foolloversbanner.gif"></a><a title="site codes and templates" href="https://templaterr.neocities.org" target="_blank"><img src="/sites/!g/templaterr1.png"></a>
-			<a href="https://scripted.neocities.org" target="_blank"><img src="https://scripted.neocities.org/SCRIPTED-BUTTON.gif" title="lots of cool codes for your site"></a>
-			<a href="https://strawberry-gashes.neocities.org" title="strawberry gashes ♥" target="0"><img src="https://i.imgur.com/V9sIpx6.gif"></a>
+			<a title="decoration materials for websites!" href="https://foollovers.com/" target="_blank"><img src="/sites/!g/foolloversbanner.gif"></a>
+
+
 			<a title="nuko emoticons!" href="https://nukocities.neocities.org/" target="_blank"><img src="https://nukocities.neocities.org/img/nukocities.gif"></a>
 			<a title="tumblr blog with pixels, cute bgs, etc" href="http://engrampixel.tumblr.com" target="_blank"><img src="http://media.tumblr.com/tumblr_m5106aHKT11qid2nw.gif"></a>
 			<a title="pixels and toybox" href="https://sleepysprout.neocities.org/index1" target="_blank"><img src="/sites/!g/sleepysprout.png"></a>
@@ -280,12 +277,15 @@
 		<center><img src="/!g/div/scissors.gif"></center>
 
 		<h2 id="img">image editing</h2>
-		<li><a href="https://www.photopea.com/" target="_blank">photopea</a> photoshop but FREE and in your browser. might be slow. might also blow up your fan.</li>
-		<li><a href="https://www.xnview.com/en/xnconvert/" target="_blank">xnconvert</a> - bulk img converter</li>
-		<li><a href="https://app.dithermark.com/">dithermark</a> - dither imgs</li>
-		<li><a href="https://convertio.co/jfif-png/" target="_blank">convertio.co</a> - let's you convert files. sadly it has a limit to how many files you can convert daily...</li>
-		<li><a href="https://saerasoft.com/caesium" target="_blank">Caesium Image Compressor</a> (program)</li>
-		<li><a href="https://www.piskelapp.com/" target="_blank">pixel art editor</a> - can also be downloaded to your PC</li>
+		<li><a href="https://www.photopea.com/" target="_blank">photopea</a> photoshop but FREE and in your browser. might be slow. might also blow up your computer.</li>
+		<li><a href="https://bulkresizephotos.com" target="_blank">online editor that let's you resize imgs by bulk</a></li>
+		<li><a href="https://picresize.com/" target="_blank">picresize</a> - online pic editor/resizer + also has the option to do it by bulk! up to 100</li>
+		<li><a href="https://doodad.dev/dither-me-this/" target="_blank">dither me this</a> - i use this a lot for my bgs!</li>
+		<li><a href="https://app.dithermark.com/">dithermark</a> - another site you can dither imgs</li>
+		<li><a href="https://convertio.co/" target="_blank">convertio.co</a> - let's you convert files. sadly it has a limit to how many files you can convert daily...</li>
+		<li><a href="https://www.xnview.com/en/xnconvert/" target="_blank">xnconvert</a> - bulk img converter software</li>
+		<li><a href="https://saerasoft.com/caesium" target="_blank">caesium image compressor</a> - online img compressor but it also offers an offline software you can download!</li>
+		<li><a href="https://www.piskelapp.com/" target="_blank">pixel art editor</a> - online / offline</li>
 
 		<center><img src="/!g/div/scissors.gif"></center>
 
@@ -293,10 +293,10 @@
 
 		<li><a href="https://omoulo.com/digitalwellbeing" target="_blank">digital wellbeing</a> - a collection of links to enhance your digital privacy</li>
 		<li><a href="https://www.deadlinkchecker.com/website-dead-link-checker.asp" target="_blank">deadlinkchecker</a> - check dead links on entire website or specific page!</li>
+		<li><a href="https://www.drlinkcheck.com" target="_blank">dr. link checker</a> - another dead link checker</li>
 		<li><a href="https://www.link-assistant.com/seo-spyglass/free-backlink-checker-tool.html" target="_blank">backlink checker</a></li>
 		<li><a href="http://calendar-muryou.com/" target="_blank">calendar-muryou</a> - site about making japanese calendars! it has lots of options</li>
 		<li><a href="https://www.y2mate.com" target="_blank">y2mate.com</a> - youtube MP4 or MP3 downloader</li>
-		<li><a href="https://www.drlinkcheck.com" target="_blank">dr. link checker</a></li>
 		<li><a href="https://www.deepl.com/translator" target="_blank">deepl.com</a> - most accurate translator you'll get. mostly use it for japanese</li>
 		<li><a href="https://tally.so/" target="_blank">tally.so</a> - create free forms</li>
 		<li><a href="https://discord-timestamp-generator.vercel.app/" target="_blank">discord timestamp generator</a></li>
