resizing img files

--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -146,6 +146,7 @@
 		<li><a href="https://solaria.neocities.org/accessibility">solaria's accessibility article</a></li>
 		<li><a href="https://solaria.neocities.org/gifpausetut">solaria's pause gif without JS </a></li>
 		<li><a href="https://www.geeksforgeeks.org/how-to-switch-between-multiple-css-stylesheets-using-javascript/" target="_blank">how to switch between different stylesheets</a></li>
+		<li><a href="https://www.freecodecamp.org/news/what-is-rem-in-css-rem-unit-font-size-padding-height-and-more/" target="_blank">what is REM in CSS?</a> - an article explaining to this size works</li>
 
 
 		<h3 id="cool">cool stuff to put on site:</h3>
@@ -278,7 +279,7 @@
 
 		<h2 id="img">image editing</h2>
 		<li><a href="https://www.photopea.com/" target="_blank">photopea</a> photoshop but FREE and in your browser. might be slow. might also blow up your computer.</li>
-		<li><a href="https://bulkresizephotos.com" target="_blank">online editor that let's you resize imgs by bulk</a></li>
+		<li><a href="https://bulkresizephotos.com" target="_blank">bulkresizephotos</a></li>
 		<li><a href="https://picresize.com/" target="_blank">picresize</a> - online pic editor/resizer + also has the option to do it by bulk! up to 100</li>
 		<li><a href="https://doodad.dev/dither-me-this/" target="_blank">dither me this</a> - i use this a lot for my bgs!</li>
 		<li><a href="https://app.dithermark.com/">dithermark</a> - another site you can dither imgs</li>
