--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -303,7 +303,7 @@
 			<a title="kawaiiness.net, cute site w/ resources, pixels, etc" href="http://kawaiiness.net/home.php" target="_blank"><img src="!g/kawaiiness.net.gif"></a>
 			<a title="pixel collection" href="https://lostsozai.tumblr.com" target="_blank"><img src="!g/lostsozai.gif"></a>
 			<a title="pixel archive, has tons of favicons" href="https://pixelsafari.neocities.org/" target="_blank"><img src="!g/pixelsafari.gif"></a>
-			<a title="sozaioukoku / tons of web materials!" href="http://sozaioukoku.fc2web.com/index.html" target="_blank"><img src="!g/sozaioukoku.gif"></a>
+			<a title="sozaioukoku / tons of web materials! mostly use their patterned bgs" href="http://sozaioukoku.fc2web.com/index.html" target="_blank"><img src="!g/sozaioukoku.gif"></a>
 			<a title="collection of graphics for your site" href="https://graphic.neocities.org" target="_blank"><img src="!g/graphic.png" target="_blank"></a>
 			<a title="pixel f2U web materials" href="http://sorahana.ciao.jp/" target="_blank"><img src="!g/sorahana.ciao.jp.gif"></a>
 			<a title="super cute pixels" href="http://whimsical.heartette.net" target="_blank"><img src="!g/whimsical.gif"></a>
@@ -319,6 +319,12 @@
 			<a title="portuguese blog i found with tons but TONS of gifs, pixels, bgs, etc" href="https://cantinhoencantado.blogs.sapo.pt" target="_blank"><img src="!g/cantinhoencantado.gif"></a>
 			<a title="web materials!" href="https://fancyparts.com/index.html" target="_blank"><img src="!g/fancyparts.gif"></a>
 			<a title="pixels" href="https://pomelo.lol/pixel/home" target="_blank"><img src="https://i.ibb.co/0GD8CXT/pombttn.gif"></a>
+			<a title="have a pet on your site" href="https://gifypet.neocities.org" target="_blank"><img src="/sites/!g/gifypet.gif"></a>
+			<a title="make your own blinkie, blinkie archive" href="https://blinkies.cafe" target="_blank"><img src="/sites/!g/blinkiesCafe.gif"></a>
+			<a href="https://scripted.neocities.org" target="_blank"><img src="https://scripted.neocities.org/SCRIPTED-BUTTON.gif" title="lots of cool codes for your site"></a>
+			<a title="site codes and templates" href="https://templaterr.neocities.org" target="_blank"><img src="/sites/!g/templaterr1.png"></a>
+			<a href="https://strawberry-gashes.neocities.org" title="strawberry gashes ♥" target="0"><img src="/sites/!g/strawberry-gashes.gif"></a>
+			<a title="archived site - cute pixel sets" href="https://web.archive.org/web/20021030170809/http://graphicgard.topcities.com/Hydrangea.html"><img src="/sites/!g/hydrangea-topcities.gif"></a>
 		</div>
 
 		<h3><img src="/!g/pix/icon_k_gyo.gif"> 404 graveyard :(</h3>
