--- a/website/vgs/fashion-dreamer/index.html
+++ b/website/vgs/fashion-dreamer/index.html
@@ -92,7 +92,7 @@
 
 		<hr>
 
-		<p><span class="date">03.nov.23</span> i am having the time of my life. <img title="jade!" src="2.jpeg" width="50%" align="right" style="margin:10px;"> here is my muse!!! they are basically just me... but i called her jade because i really like that name :3</p>
+		<p><span class="date">03.nov.23</span> i am having the time of my life. <img title="jade!" src="2.jpg" width="50%" align="right" style="margin:10px;"> here is my muse!!! they are basically just me... but i called her jade because i really like that name :3</p>
 
 		<p>i think i've played like... 5 hours or so BUT I LOVE IT SO MUCH!!!! i cant wait to design my own stuff. and the online aspect is so cool as well. i love how people can pick an outfit for you based on what you like!!!</p>
 
@@ -111,7 +111,7 @@
 			<img src="lookit2.jpg" width="100%">
 			<img src="lookit4.jpg" width="49%">
 			<img title="this fit fuckign slayed" src="lookit3.jpg" width="49%">
-			<img title="LOVE this one as well" src="5.jpeg" width="100%">
+			<img title="LOVE this one as well" src="5.jpg" width="100%">
 		</div>
 
 		<div class="gallery">
@@ -135,7 +135,7 @@
 			<img src="jade6.jpg" width="49%">
 			<img src="jade1.jpg" width="49%">
 			<img src="jade5.jpg" width="49%">
-			<img src="2.jpeg" width="49%">
+			<img src="2.jpg" width="49%">
 		</div>
 
 		<div class="gallery">
@@ -148,8 +148,8 @@
 			<img src="jade2.jpg" width="49%">
 			<img src="jade9.jpg" width="100%">
 			<img src="jade3.jpg" width="100%">
-			<img src="1.jpeg" width="100%">
-			<img src="4.jpeg" width="100%">
+			<img src="1.jpg" width="100%">
+			<img src="4.jpg" width="100%">
 		</div>
 
 
