--- a/website/home.html
+++ b/website/home.html
@@ -108,13 +108,14 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> fortnite, fashion dreamer</p>
+			<p><span class="hl">playing:</span> <a href="/vgs/fortnite">fortnite</a>, <a href="/vgs/fashion-dreamer/">fashion dreamer</a>, <a href="/vgs/dog-island">the dog island</a></p>
 			<p><span class="hl">reading:</span> <i>the guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki
 				fujimoto, <i>villain</i> by fujita</p>
-			<p><span class="hl">watching:</span> -</p>
+			<p><span class="hl">watching:</span> the tatami galaxi</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> getting into college again!</p>
-			<p><span class="hl">coding:</span> this very homepage!!!</p>
+			<p><span class="hl">coding:</span> 2023 music recap :3</p>
+			<p class="date">last updated on 15.dec.23</p>
 		</div>
 
 		<div id="updates" class="box">
@@ -306,7 +307,7 @@ feel free to look around :) just don't be THAT person and take the entire code f
 		<p><a href="/notebook/links/credit.html#home">credit for materials used!</a> / homepage runing on v3!</p>
 		<p>website coded with lots of love by des <img src="/!g/pix/catheart1.gif" alt="">
 			on the web since <b>april 11, 2023</b> <img src="/!g/pix/catroll.gif" alt="">
-			hosted on <a class="outlink" href="https://neocities.org/site/doqmeat">neocities</a></p>
+			hosted on <a class="outlink" href="https://neocities.org/site/doqmeat" target="_blank">neocities</a></p>
 	</footer>
 
 	<!--	music player -->
