--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -149,7 +149,7 @@
 		<li><a href="https://www.freecodecamp.org/news/what-is-rem-in-css-rem-unit-font-size-padding-height-and-more/" target="_blank">what is REM in CSS?</a> - an article explaining to this size works</li>
 
 
-		<h3 id="cool">cool stuff to put on site:</h3>
+		<h3 id="cool">cool stuff to put on site</h3>
 
 		<li><a href="https://sadgrl.online/projects/ideas/" target="_blank">project ideas for your site!</a> by sadgrl.online</li>
 		<li><a href="https://clap.fc2.com/en/" target="_blank">webclap</a> button for your site!</li>
@@ -172,7 +172,7 @@
 		<li><a href="https://surfing-waves.com/feed.htm" target="_blank">RSS feed widget</a></li>
 		<li><a href="https://github.com/captbaritone/webamp" target="_blank">webamp</a> - music player / <a href="https://codepen.io/sadness97/pen/RwKbNWW?editors=1000" target="_blank">sadness' tutorial on codepen</a></li>
 
-		<h3 id="neat">neat codes:</h3>
+		<h3 id="neat">neat codes</h3>
 
 		<li><a title="templaterr" href="https://templaterr.neocities.org/sidebar/" target="_blank">sidebar the same across all pages (w/ js)</a> by templaterr</li>
 		<li><a href="https://codepen.io/sadness97/pen/mdOXzNW" target="_blank">falling items code</a> by sadness</li>
@@ -279,8 +279,8 @@
 
 		<h2 id="img">image editing</h2>
 		<li><a href="https://www.photopea.com/" target="_blank">photopea</a> photoshop but FREE and in your browser. might be slow. might also blow up your computer.</li>
-		<li><a href="https://bulkresizephotos.com" target="_blank">bulkresizephotos</a></li>
-		<li><a href="https://picresize.com/" target="_blank">picresize</a> - online pic editor/resizer + also has the option to do it by bulk! up to 100</li>
+		<li><a href="https://bulkresizephotos.com" target="_blank">bulkresizephotos</a> - has lots of options on how you want to edit the pics!</li>
+		<li><a href="https://picresize.com/" target="_blank">picresize</a> - online pic editor/resizer + also has the option to do it by bulk!</li>
 		<li><a href="https://doodad.dev/dither-me-this/" target="_blank">dither me this</a> - i use this a lot for my bgs!</li>
 		<li><a href="https://app.dithermark.com/">dithermark</a> - another site you can dither imgs</li>
 		<li><a href="https://convertio.co/" target="_blank">convertio.co</a> - let's you convert files. sadly it has a limit to how many files you can convert daily...</li>
