--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -301,6 +301,7 @@
 		<li><a href="https://www.deepl.com/translator" target="_blank">deepl.com</a> - most accurate translator you'll get. mostly use it for japanese</li>
 		<li><a href="https://tally.so/" target="_blank">tally.so</a> - create free forms</li>
 		<li><a href="https://discord-timestamp-generator.vercel.app/" target="_blank">discord timestamp generator</a></li>
+		<li><a href="https://webmention.io/" target="_blank">webmention.io</a></li>
 
 		<h3 id="add-on">firefox add-ons</h3>
 		<li><a href="https://addons.mozilla.org/en-US/firefox/addon/activate-reader-view/" target="_blank">force reader view</a></li>
@@ -320,6 +321,7 @@
 		<li><a href="https://www.tree.fm/">tree.fm</a> - listen to a forest!</li>
 		<li><a href="http://www.rpgamers.net/radio/" target="_blank">rpgamers.net radio</a> - a variety of video game ost songs</li>
 		<li><a href="https://www.lofiatc.com/?icao=kphx" target="_blank">lo-fi air traffic control</a></li>
+		<li><a href="https://www.xmanagerapp.com/" target="_blank">xmanager</a> - pretend you have spotify premium on android</li>
 
 		<h3 id="games">games</h3>
 		<li><a href="https://melonds.kuribo64.net/" target="_blank">melon DS</a> - DS emulator</li>
