--- a/website/notebook/sitely/to-dos.html
+++ b/website/notebook/sitely/to-dos.html
@@ -109,6 +109,7 @@
 			<li class="no">revamp <a href="https://status.cafe/users/doqmeat" target="_blank">status.cafe</a> CSS</li>
 			<li class="no">re-do <a href="/webgarden/greenhouse.html" target="_blank">webgarden pot</a></li>
 			<li class="no">update counter imgs</li>
+			<li class="no">webmentions? </li>
 		</ul>
 		<p>last updated on 04.dec.23</p>
 	</div>
